...
  );

  return (
    <SafeAreaView style={[styles.container, { backgroundColor: colors.card }]}>
      <KeyboardView>
        <ScrollView
          testID="forgotPasswordScroll"
          keyboardShouldPersistTaps="handled">
          <ForgotPasswordForm onSubmit={onSubmit} />
        </ScrollView>
      </KeyboardView>
    </SafeAreaView>
  );
...
