...
    [dispatch],
  );

  return (
    <SafeAreaView style={[styles.container, { backgroundColor: colors.card }]}>
      <KeyboardView>
        <ScrollView testID="signUpScroll" keyboardShouldPersistTaps="handled">
          <SignUpForm onSubmit={onSubmit} />
        </ScrollView>
      </KeyboardView>
    </SafeAreaView>
  );
};
...
